# Aizo-P1-sorting

./: CMakeLists.txt  run_studies.sh
data/: float.txt  float_out.txt  in.txt  int.txt  int_out.txt  string.txt  string_out.txt  unsigned_long.txt  unsigned_long_out.txt
include/: Array.h  BinaryTree.h  BucketSort.h  CsvWriter.h  DoubleList.h  FileHelper.h  QuickSort.h  ShellSort.h  SingleList.h  Stack.h
results/: study_A.csv  study_B.csv  study_C.csv  study_Omega.csv  study_alpha_quick.csv  study_alpha_shell.csv
src/: main.cpp
